5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1630_2927.log
== SUBMITION (2019-04-02 16:19:29) 
-- CODE:
vb=float(input())
e=float(input())
print(round(b=vb+e,2))
-- EXECUTION TIME:
0.170435
-- ERROR:
  File "/home/codebench/codes/1630/2927/main.py", line 3
    print(round(b=vb+e,2))
                      ^
SyntaxError: non-keyword arg after keyword arg

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:30) 
-- CODE:
vb=float(input())
e=float(input())
print(round(b=vb+e,2))
-- ERROR:
File "XXXX", line 3
    print(round(b=vb+e,2))
                      ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:40) 
-- CODE:
vb=float(input())
e=float(input())
print(round(vb+e,2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:41) 
-- CODE:
vb=float(input())
e=float(input())
print(round(vb+e,2))
-- EXECUTION TIME:
0.170054
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:20:10) 
-- CODE:
vb=float(input())
e=float(input())
total=vb+e
print(round(total,2))
-- EXECUTION TIME:
0.147752
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:12) 
-- CODE:
vb=float(input())
e=float(input())
total=vb+e
print(round(total,2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:20:12) 
-- CODE:
vb=float(input())
e=float(input())
total=vb+e
print(round(total,2))
-- EXECUTION TIME:
0.197613
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:20:59) 
-- CODE:
vb=float(input())
e=int(input())
total=vb+e
print(round(total,2))
-- EXECUTION TIME:
0.214199
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:00) 
-- CODE:
vb=float(input())
e=int(input())
total=vb+e
print(round(total,2))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:04) 
-- CODE:
vb=float(input())
e=int(input())
total=vb+e
print(round(total,2))
-- EXECUTION TIME:
0.179257
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:51) 
-- CODE:
vb=float(input())
e=int(input())
esfirra=1.50
suco=3.50
total=suco+esfirra*e
print(round(total,2))
-- EXECUTION TIME:
0.196886
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
8.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:52) 
-- CODE:
vb=float(input())
e=int(input())
esfirra=1.50
suco=3.50
total=suco+esfirra*e
print(round(total,2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:44) 
-- CODE:
vb=float(input())
e=int(input())
esfirra=1.50
suco=3.50
total=vb+esfirra*e
print(round(total,2))
-- EXECUTION TIME:
0.134257
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
